iaas/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-service
  labels:
    app: blockchain-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blockchain-service
